Rename slap() function to checkIfFinalRound(), refactor unhideCenterPile and collectCenterPile to fix card pile visibility bug

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,6 @@ main {
   width: 60%;
   min-width: 275px;
   min-height: 475px;
-  background: black;
   border-radius: 5%;
 }
 
